# HyCC

./: .gitignore  Dockerfile  Makefile  README.md
aby-hycc/: CMakeLists.txt  hycc_adapter.cpp  hycc_adapter.h  main.cpp
aby-hycc/test/test_add_to_all/int32/: add_to_all<int32[5],int32<5>,int32<33>>@arith.circ  add_to_all<int32[5],int32<5>,int32<33>>@bool_depth.circ  add_to_all<int32[5],int32<5>,int32<33>>@bool_depth.stats  add_to_all<int32[5],int32<5>,int32<33>>@bool_size.circ  add_to_all<int32[5],int32<5>,int32<33>>@bool_size.stats  add_to_all<int32[5],int32<5>,int32<49>>@arith.circ  add_to_all<int32[5],int32<5>,int32<49>>@bool_depth.circ  add_to_all<int32[5],int32<5>,int32<49>>@bool_depth.stats  add_to_all<int32[5],int32<5>,int32<49>>@bool_size.circ  add_to_all<int32[5],int32<5>,int32<49>>@bool_size.stats  mpc_main@arith.circ  mpc_main@bool_depth.circ  mpc_main@bool_size.circ  sum<int32[5],int32<3>>@arith.circ  sum<int32[5],int32<3>>@arith.stats  sum<int32[5],int32<3>>@bool_depth.circ  sum<int32[5],int32<3>>@bool_depth.stats  sum<int32[5],int32<3>>@bool_size.circ  sum<int32[5],int32<3>>@bool_size.stats  sum<int32[5],int32<4>>@arith.circ  sum<int32[5],int32<4>>@bool_depth.circ  sum<int32[5],int32<4>>@bool_depth.stats  sum<int32[5],int32<4>>@bool_size.circ  sum<int32[5],int32<4>>@bool_size.stats
aby-hycc/test/test_add_to_all/int64/: add_to_all<int64[5],int64<5>,int64<33>>@arith.circ  add_to_all<int64[5],int64<5>,int64<33>>@arith.stats  add_to_all<int64[5],int64<5>,int64<33>>@bool_depth.circ  add_to_all<int64[5],int64<5>,int64<33>>@bool_depth.stats  mpc_main@arith.circ  (+19 more)
(+145 files in other folders)
